--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 8081",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.11.5",
     "@quasar/extras": "^1.0.0",
+    "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
+    "bootstrap-vue": "^2.17.3",
     "core-js": "^3.8.3",
+    "mutationobserver-shim": "^0.3.7",
+    "popper.js": "^1.16.1",
+    "portal-vue": "^2.1.7",
     "quasar": "^2.0.0",
     "vue": "^3.2.13",
+    "vue-device-detector": "^1.1.6",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
@@ -24,6 +32,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "sass": "1.32.12",
     "sass-loader": "^12.0.0",
+    "vue-cli-plugin-bootstrap-vue": "~0.8.2",
     "vue-cli-plugin-quasar": "~5.0.2"
   },
   "eslintConfig": {
